fabrique-derive/tests/ui/derive_on_enum.rs
use fabrique_derive::Factory;

#[derive(Factory)]
enum Anvil {
    Heavy,
    Light,
}

fn main() {}